# Halide

./: CMakeLists.txt  Makefile
apps/camera_pipe/: CMakeLists.txt  camera_pipe_generator.cpp  distributed.cpp  distributed.h  dump.cpp  dumpload.cpp  dumpload.h  process.cpp
apps/camera_pipe/fcam/: Demosaic.cpp  Demosaic.cu  Demosaic.h
src/: AddImageChecks.cpp  AsyncProducers.cpp  Bounds.cpp  BoundsInference.cpp  Buffer.h  CMakeLists.txt  CodeGen_Hexagon.cpp  CodeGen_LLVM.cpp  Func.cpp  Func.h  FuseGPUThreadLoops.cpp  Generator.h  IR.cpp  IR.h  IRPrinter.cpp  InjectCommunications.cpp  InjectCommunications.h  InjectHostDevBufferCopies.cpp  LICM.cpp  LLVM_Runtime_Linker.cpp  Lower.cpp  LowerWarpShuffles.cpp  PartitionLoops.cpp  Pipeline.cpp  Profiling.cpp  RebaseLoopsToZero.cpp  Schedule.cpp  Schedule.h  ScheduleFunctions.cpp  SelectGPUAPI.cpp  Simplify_Stmts.cpp  SlidingWindow.cpp  StorageFolding.cpp  Target.cpp  Target.h  TrimNoOps.cpp  UniquifyVariableNames.cpp  UnrollLoops.cpp  VectorizeLoops.cpp
src/autoschedulers/adams2019/: Makefile
src/runtime/: CMakeLists.txt  HalideBuffer.h  HalideRuntime.h  mpi.cpp
test/correctness/: buffer_alloc.cpp  cross_compilation.cpp  simplify.cpp
test/distributed/: CMakeLists.txt  distributed.cpp  distributed_aottest.cpp  distributed_generator.cpp
